--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <div class="intro">
       <h2>Welcome!</h2>
       <p>It's a classic pacman game.Eat or get eaten!Tonight you dine in Hell!!(Not really, just have fun)</p>
+      <h4>Controls:</h4>
+      <ul>
+        <li><img src="img/controls.jpg" class="keys"> To move</li>
+        <li><img src="img/pause.png" class="keys"> To pause</li>
+      </ul>
       <button type="button" name="button" class="start">PLAY</button>
     </div>
   <canvas id="myCanvas" width="800" height="600"></canvas>
+  <h1 id="paused">Game paused.Press enter to unpause</h1>
   </div>
   <div class="playAgain">
     <button type="button" name="button" id="retry">Try Again?</button>
