--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </div>
   <div class="playAgain">
     <button type="button" name="button" id="retry">Try Again?</button>
+    <button type="button" name="button" id="quit">Quit</button>
   </div>
   <div class="mainFoot">
   <footer>
